@@ -14,10 +14,10 @@ index f1335f6b95..6d311793da 100644
  # TODO we should fix the long-line errors in yacc/*.c
  /yacc/*.[ch]         typo.very-long-line=may
 diff --git a/Changes b/Changes
-index 3f0cd7a145..00205a8398 100644
+index 1201a69a20..1951e955fd 100644
 --- a/Changes
 +++ b/Changes
-@@ -873,7 +873,6 @@ OCaml 5.1.0
+@@ -876,7 +876,6 @@ OCaml 5.1.0
  - #12252: Fix shared library build error on RISC-V.
    (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)
  
@@ -25,7 +25,7 @@ index 3f0cd7a145..00205a8398 100644
  OCaml 5.0.0 (15 December 2022)
  ------------------------------
  
-@@ -1418,11 +1417,6 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1421,11 +1420,6 @@ OCaml 5.0.0 (15 December 2022)
    (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
     Xavier Leroy)
  
@@ -37,7 +37,7 @@ index 3f0cd7a145..00205a8398 100644
  - #11516, #11524: Fix the `deprecated_mutable` attribute.
    (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
  
-@@ -1451,6 +1445,30 @@ OCaml 5.0.0 (15 December 2022)
+@@ -1454,6 +1448,30 @@ OCaml 5.0.0 (15 December 2022)
    (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
     report by Yaron Minsky)
  
@@ -68,7 +68,7 @@ index 3f0cd7a145..00205a8398 100644
  OCaml 4.14.0 (28 March 2022)
  ----------------------------
  
-@@ -1486,13 +1504,13 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1489,13 +1507,13 @@ OCaml 4.14.0 (28 March 2022)
  - #10549: Stack overflow detection and naked pointers checking for ARM64
    (Xavier Leroy, review by Stephen Dolan)
  
@@ -84,7 +84,7 @@ index 3f0cd7a145..00205a8398 100644
     code or an OCaml thread stops
    (Xavier Leroy, review by David Allsopp and Damien Doligez)
  
-@@ -1599,6 +1617,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1602,6 +1620,9 @@ OCaml 4.14.0 (28 March 2022)
  - #10464: Add List.is_empty.
    (Craig Ferguson, review by David Allsopp)
  
@@ -94,7 +94,7 @@ index 3f0cd7a145..00205a8398 100644
  ### Other libraries:
  
  - #10192: Add support for Unix domain sockets on Windows and use them
-@@ -1862,6 +1883,9 @@ OCaml 4.14.0 (28 March 2022)
+@@ -1865,6 +1886,9 @@ OCaml 4.14.0 (28 March 2022)
  
  ### Build system:
  
@@ -10155,7 +10155,7 @@ index 0000000000..50efc9345b
 +                 -e 's/\d027\[m/\d027[0m/g' \
 diff --git a/diff-against-trunk-system.diff b/diff-against-trunk-system.diff
 new file mode 100644
-index 0000000000..6464c75f5f
+index 0000000000..3fb525f54f
 --- /dev/null
 +++ b/diff-against-trunk-system.diff
 @@ -0,0 +1,10135 @@
@@ -10175,10 +10175,10 @@ index 0000000000..6464c75f5f
 + # TODO we should fix the long-line errors in yacc/*.c
 + /yacc/*.[ch]         typo.very-long-line=may
 +diff --git a/Changes b/Changes
-+index 3f0cd7a145..00205a8398 100644
++index 1201a69a20..1951e955fd 100644
 +--- a/Changes
 ++++ b/Changes
-+@@ -873,7 +873,6 @@ OCaml 5.1.0
++@@ -876,7 +876,6 @@ OCaml 5.1.0
 + - #12252: Fix shared library build error on RISC-V.
 +   (Edwin Török, review by Nicolás Ojeda Bär and Xavier Leroy)
 + 
@@ -10186,7 +10186,7 @@ index 0000000000..6464c75f5f
 + OCaml 5.0.0 (15 December 2022)
 + ------------------------------
 + 
-+@@ -1418,11 +1417,6 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1421,11 +1420,6 @@ OCaml 5.0.0 (15 December 2022)
 +   (Damien Doligez, report by Thierry Martinez and Vincent Laviron, review by
 +    Xavier Leroy)
 + 
@@ -10198,7 +10198,7 @@ index 0000000000..6464c75f5f
 + - #11516, #11524: Fix the `deprecated_mutable` attribute.
 +   (Chris Casinghino, review by Nicolás Ojeda Bär and Florian Angeletti)
 + 
-+@@ -1451,6 +1445,30 @@ OCaml 5.0.0 (15 December 2022)
++@@ -1454,6 +1448,30 @@ OCaml 5.0.0 (15 December 2022)
 +   (Gabriel Scherer, review by Jacques Garrigue and Florian Angeletti,
 +    report by Yaron Minsky)
 + 
@@ -10229,7 +10229,7 @@ index 0000000000..6464c75f5f
 + OCaml 4.14.0 (28 March 2022)
 + ----------------------------
 + 
-+@@ -1486,13 +1504,13 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1489,13 +1507,13 @@ OCaml 4.14.0 (28 March 2022)
 + - #10549: Stack overflow detection and naked pointers checking for ARM64
 +   (Xavier Leroy, review by Stephen Dolan)
 + 
@@ -10245,7 +10245,7 @@ index 0000000000..6464c75f5f
 +    code or an OCaml thread stops
 +   (Xavier Leroy, review by David Allsopp and Damien Doligez)
 + 
-+@@ -1599,6 +1617,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1602,6 +1620,9 @@ OCaml 4.14.0 (28 March 2022)
 + - #10464: Add List.is_empty.
 +   (Craig Ferguson, review by David Allsopp)
 + 
@@ -10255,7 +10255,7 @@ index 0000000000..6464c75f5f
 + ### Other libraries:
 + 
 + - #10192: Add support for Unix domain sockets on Windows and use them
-+@@ -1862,6 +1883,9 @@ OCaml 4.14.0 (28 March 2022)
++@@ -1865,6 +1886,9 @@ OCaml 4.14.0 (28 March 2022)
 + 
 + ### Build system:
 + 
